naver serch update

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="naver-site-verification" content="c7711ada48bf25b2d2883858bd559c55bd97ed24" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/favicon/apple-icon-57x57.png">
