meta tag update

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="화진로보틱스 끊임없는 열정과 도전정신으로 화진로보틱스가 여러분의 성공을 함께 이루어나갑니다."
     />
+    <!-- Naver -->
     <meta name="naver-site-verification" content="c7711ada48bf25b2d2883858bd559c55bd97ed24" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <!-- OG -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://hwajinrobotics.com/" /> 
+    <meta property="og:title" content="화진로보틱스" />
+    <meta property="og:image" content="%PUBLIC_URL%/hwajin-logo.png" />
+    <meta property="og:description" content="화진로보틱스 끊임없는 열정과 도전정신으로 화진로보틱스가 여러분의 성공을 함께 이루어나갑니다." />
+    <meta property="og:site_name" content="hwajinrobotics" />  
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/favicon/apple-icon-60x60.png">
