google sercg metatag

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     />
     <!-- Naver -->
     <meta name="naver-site-verification" content="c7711ada48bf25b2d2883858bd559c55bd97ed24" />
+    <!-- Google -->
+    <meta name="google-site-verification" content="Gk447qrHqltTpoUeY55jZZXY52mze9vF5q_nRpB8XYw" />
     <!-- OG -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hwajinrobotics.com/" /> 
@@ -43,7 +45,6 @@
     <title>화진로보틱스</title>
   </head>
   <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
   </body>
 </html>
